src/widgets/Weekly/styles.module.scss
.weekly {
  background: var(--color-primary-10);
  padding-block: 57px 55px;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  width: min(100%, 2000px);
  margin: 0 auto;
  overflow: hidden;
  gap: 63px;

  @media (min-width: 768px) {
    padding-block: 50px 64px;
    gap: 70px;
  }

  @media (min-width: 1200px) {
    padding-block: 70px 90px;
    gap: 100px;
  }
}

.title {
  font-size: 32px;
  font-weight: 700;
  margin-bottom: 30px;
  text-align: center;
}

.carouselWrapper {
  position: relative;
  width: 100%;
  max-width: 2000px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 60px;

  @media (min-width: 768px) {
    gap: 81px;
  }

  @media (min-width: 1100px) {
    gap: 114px;
  }
}

.viewport {
  overflow: hidden;
  display: flex;
  width: 100%;
}

.container {
  display: flex;
  gap: 28px;

  @media (min-width: 768px) {
    gap: 28px;
  }

  @media (min-width: 1200px) {
    gap: 40px;
  }
}

.slide {
  flex: 0 0 auto;
  min-width: 0;
  //margin-right: 28px;
  //
  //@media (min-width: 768px) {
  //  margin-right: 28px;
  //}
  //
  //@media (min-width: 1200px) {
  //  margin-right: 40px;
  //}
}

.navigation {
  background: var(--color-primary-5);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  width: fit-content;

  @media (min-width: 768px) {
    border-radius: 12px;
  }

  @media (min-width: 1200px) {
    border-radius: 17px;
  }
}

.divider {
  width: 1px;
  height: 15px;
  background: #E6E8EC;
}

.navButton {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 13px;
  border-radius: 50%;
  cursor: pointer;
  transition: 300ms all ease-in-out;

  &.disabled {
    opacity: 50%;
    cursor: not-allowed;
  }

  @media (min-width: 768px) {
    border-radius: 12px;
    padding: 15px;
  }

  @media (min-width: 1200px) {
    border-radius: 17px;
    padding: 22px;
  }

  &:first-of-type {
    padding-right: 22px;

    @media (min-width: 768px) {
      padding-right: 25px;
    }

    @media (min-width: 1200px) {
      padding-right: 35px;
    }
  }

  &:last-of-type {
    padding-right: 22px;

    @media (min-width: 768px) {
      padding-left: 25px;
    }

    @media (min-width: 1200px) {
      padding-left: 35px;
    }
  }

  & img {
    transition: 300ms all ease-in-out;
    width: 16px;
    height: 16px;

    @media (min-width: 768px) {
      width: 19px;
      height: 19px;
    }

    @media (min-width: 1200px) {
      width: 26px;
      height: 26px;
    }
  }

  &:hover {
    & img {
      scale: 120%;
    }
  }
}

.scrollNext {
  & img {
    rotate: 180deg;
  }
}

.heading {
  font-family: 'Poppins', sans-serif;
  font-size: 30px;
  font-weight: 600;
  line-height: 27px;
  color: var(--color-primary-15);

  @media (min-width: 768px) {
    font-size: 32px;
    line-height: 19px;
  }

  @media (min-width: 1200px) {
    font-size: 45px;
    line-height: 27px;
  }
}

